--- a/course.html
+++ b/course.html
@@ -11,7 +11,7 @@
         <body>
 <section class="sub-header">
     <nav>
-        <a href="index.html"><img src="/images/logo1.png"></a>
+        <a href="index.html"><img src="./images/logo1.png"></a>
         <div class="nav-links" id="navLinks">
             <i class="fa fa-times" onclick="hidemenu()"></i>
         <ul>
